bluec-tests/tests/valid/types_casts/dependencies/math.c
#include <math.h>

int float_isnan(float f) {
    return isnan(f);
}

int float_isinf(float f) {
    return isinf(f);
}

double double_fabs(double d) {
    return fabs(d);
}
