bluec-tests/tests/invalid/expr_alignof/alignof_function2.c
int main(void) {
    return _Alignof (int (float, double));
}